--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -45,8 +45,8 @@ jobs:
       
       - name: Run bandit security scan
         run: |
-          bandit -r pakit/ -f json -o bandit-report.json -ll --skip B101,B601 || true
-          bandit -r pakit/ -f txt -ll --skip B101,B601
+          bandit -r . -f json -o bandit-report.json -ll --skip B101,B601 --exclude ./tests || true
+          bandit -r . -f txt -ll --skip B101,B601 --exclude ./tests
       
       - name: Upload bandit results
         if: always()
