--- a/requirements.txt
+++ b/requirements.txt
@@ -34,9 +34,15 @@ pyOpenSSL>=23.3.0
 # scikit-learn>=1.4.0   # Machine learning for optimization
 
 # API server (optional)
-# fastapi>=0.109.0      # REST API
-# uvicorn>=0.27.0       # ASGI server
+fastapi>=0.109.0      # REST API
+uvicorn>=0.27.0       # ASGI server
 # websockets>=12.0      # WebSocket support
+
+# Data serialization
+msgpack>=1.0.0
+loguru>=0.7.0
+pydantic>=2.0.0
+python-multipart>=0.0.6
 
 # Development
 pytest>=8.0.0          # Testing framework
