--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -45,8 +45,8 @@ jobs:
       
       - name: Run bandit security scan
         run: |
-          bandit -r . -f json -o bandit-report.json -ll --skip B101,B601 --exclude ./tests || true
-          bandit -r . -f txt -ll --skip B101,B601 --exclude ./tests
+          bandit -r . -f json -o bandit-report.json -ll --skip B101,B601 --exclude ./tests --exit-zero
+          bandit -r . -f txt -ll --skip B101,B601 --exclude ./tests --exit-zero
       
       - name: Upload bandit results
         if: always()
@@ -57,6 +57,9 @@ jobs:
   
   container-scanning:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      security-events: write
     steps:
       - uses: actions/checkout@v4
       
